Gestion de cartes par cavalier

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,6 +157,7 @@
 
     <!--Carte-->
     <string name="carte_save">La carte est sauvegardé</string>
+    <string name="carte_delete">La carte est supprimée</string>
 
 
 
