--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,7 +160,7 @@
     <string name="carte_delete">La carte est supprimée</string>
 
     <!--Taquin-->
-    <string name="title_activity_taquin">Taquin</string>
+    <string name="title_activity_taquin">Jeu</string>
 
 
 
